--- a/NorthWestLabs/Web.config
+++ b/NorthWestLabs/Web.config
@@ -10,6 +10,10 @@
           type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
           requirePermission="false"/>
     </configSections>
+  <connectionStrings>
+    <add name="NorthWestLabsContext" connectionString="Data Source=DESKTOP-SB4UJ98\SQLEXPRESS;Initial Catalog=NorthWestLabs;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+         providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
@@ -52,3 +56,8 @@
     </providers>
   </entityFramework>
 </configuration>
+
+<!--
+  Chris Y's connection string:
+  Data Source=DESKTOP-SB4UJ98\SQLEXPRESS;Initial Catalog=NorthWestLabs;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
+-->
