--- a/NorthWestLabs/NorthWestLabs.csproj
+++ b/NorthWestLabs/NorthWestLabs.csproj
@@ -121,6 +121,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\SeattleController.cs" />
+    <Compile Include="Controllers\SingaporeController.cs" />
     <Compile Include="DAL\NorthWestLabsContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -153,6 +154,11 @@
     <Content Include="Views\Seattle\Edit.cshtml" />
     <Content Include="Views\Seattle\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Singapore\Create.cshtml" />
+    <Content Include="Views\Singapore\Delete.cshtml" />
+    <Content Include="Views\Singapore\Details.cshtml" />
+    <Content Include="Views\Singapore\Edit.cshtml" />
+    <Content Include="Views\Singapore\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
