--- a/NorthWestLabs/NorthWestLabs.csproj
+++ b/NorthWestLabs/NorthWestLabs.csproj
@@ -120,6 +120,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ClientsController.cs" />
     <Compile Include="Controllers\SeattleController.cs" />
     <Compile Include="Controllers\SingaporeController.cs" />
     <Compile Include="DAL\NorthWestLabsContext.cs" />
@@ -159,6 +160,11 @@
     <Content Include="Views\Singapore\Details.cshtml" />
     <Content Include="Views\Singapore\Edit.cshtml" />
     <Content Include="Views\Singapore\Index.cshtml" />
+    <Content Include="Views\Clients\Create.cshtml" />
+    <Content Include="Views\Clients\Delete.cshtml" />
+    <Content Include="Views\Clients\Details.cshtml" />
+    <Content Include="Views\Clients\Edit.cshtml" />
+    <Content Include="Views\Clients\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
