Home Controller and Views

--- a/NorthWestLabs/NorthWestLabs.csproj
+++ b/NorthWestLabs/NorthWestLabs.csproj
@@ -169,8 +169,8 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\CreateProfile.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\LogIn.cshtml" />
     <Content Include="Views\Home\Pricing.cshtml" />
+    <Content Include="Views\Home\LogInClient.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
