--- a/NorthWestLabs/Web.config
+++ b/NorthWestLabs/Web.config
@@ -11,7 +11,7 @@
           requirePermission="false"/>
     </configSections>
   <connectionStrings>
-    <add name="NorthWestLabsContext" connectionString="Data Source=DESKTOP-SB4UJ98\SQLEXPRESS;Initial Catalog=NorthWestLabs;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    <add name="NorthWestLabsContext" connectionString="Data Source=LAPTOP-MR6O1QQ0\SQLEXPRESS;Initial Catalog=NorthWestLabs;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
