--- a/NorthWestLabs/NorthWestLabs.csproj
+++ b/NorthWestLabs/NorthWestLabs.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AddQuote.cs" />
     <Compile Include="Models\Assay.cs" />
     <Compile Include="Models\Assay_Has_TestType.cs" />
     <Compile Include="Models\Bank.cs" />
@@ -190,6 +191,10 @@
     <Content Include="Views\Home\ListEmps.cshtml" />
     <Content Include="Views\Home\CreateEmployee.cshtml" />
     <Content Include="Views\Home\EmpLogin.cshtml" />
+    <Content Include="Views\Clients\AddQuote.cshtml" />
+    <Content Include="Views\Singapore\SeeQuotes.cshtml" />
+    <Content Include="Views\Singapore\AssignPrice.cshtml" />
+    <Content Include="Views\Singapore\CurrentQuotes.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
