--- a/NorthWestLabs/Web.config
+++ b/NorthWestLabs/Web.config
@@ -27,6 +27,13 @@
       <forms loginUrl="~/Home/Login" timeout="2880" />
     </authentication>
   </system.web>
+  <system.net>
+    <mailSettings>
+      <smtp from="northwestlabspricing@gmail.com">
+        <network host="smtp.gmail.com" port="587" userName="northwestlabspricing@gmail.com" password="Northwest01" enableSsl="true" />
+      </smtp>
+    </mailSettings>
+  </system.net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
