--- a/NorthWestLabs/NorthWestLabs.csproj
+++ b/NorthWestLabs/NorthWestLabs.csproj
@@ -163,14 +163,9 @@
     <Content Include="Views\Singapore\Details.cshtml" />
     <Content Include="Views\Singapore\Edit.cshtml" />
     <Content Include="Views\Singapore\Index.cshtml" />
-    <Content Include="Views\Clients\Create.cshtml" />
-    <Content Include="Views\Clients\Delete.cshtml" />
-    <Content Include="Views\Clients\Details.cshtml" />
-    <Content Include="Views\Clients\Edit.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Pricing.cshtml" />
-    <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\CreateProfile.cshtml" />
     <Content Include="Views\Home\ClLogin.cshtml" />
     <Content Include="Views\Seattle\WorkOrderDelete.cshtml" />
@@ -184,12 +179,15 @@
     <Content Include="Views\Seattle\EmployeeIndex.cshtml" />
     <Content Include="Views\Seattle\SeattleHome.cshtml" />
     <Content Include="Views\Seattle\WorkOrderEdit.cshtml" />
-    <Content Include="Views\Clients\Index.cshtml" />
     <Content Include="Views\Home\ViewClients.cshtml" />
-    <Content Include="Views\Home\CreateProfile.cshtml" />
-    <Content Include="Views\Home\ListEmps.cshtml" />
     <Content Include="Views\Home\CreateEmployee.cshtml" />
     <Content Include="Views\Home\EmpLogin.cshtml" />
+    <Content Include="Views\Clients\ClientHome.cshtml" />
+    <Content Include="Views\Clients\ViewProfile.cshtml" />
+    <Content Include="Views\Clients\EditProfile.cshtml" />
+    <Content Include="Views\Clients\ViewOrders.cshtml" />
+    <Content Include="Views\Clients\OrderDetails.cshtml" />
+    <Content Include="Views\Clients\CreateOrder.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
