--- a/NorthWestLabs/NorthWestLabs.csproj
+++ b/NorthWestLabs/NorthWestLabs.csproj
@@ -99,7 +99,14 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\alex-kondratiev-H9t723yPjYI-unsplash.jpg" />
+    <Content Include="Content\Images\greg-anderson.jpg" />
+    <Content Include="Content\Images\hans-reniers-lQGJCMY5qcM-unsplash.jpg" />
+    <Content Include="Content\Images\louis-reed-pwcKF7L4-no-unsplash.jpg" />
+    <Content Include="Content\Images\nasa-Q1p7bh3SHj8-unsplash.jpg" />
+    <Content Include="Content\Images\nw.png" />
     <Content Include="Content\Site.css" />
+    <Content Include="Content\Styles\Styles.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -178,7 +185,7 @@
     <Content Include="Views\Home\ViewClients.cshtml" />
     <Content Include="Views\Home\CreateEmployee.cshtml" />
     <Content Include="Views\Home\EmpLogin.cshtml" />
-    <Content Include="Views\Clients\AddQuote.cshtml" />
+    <Content Include="Views\Home\AddQuote.cshtml" />
     <Content Include="Views\Singapore\SeeQuotes.cshtml" />
     <Content Include="Views\Singapore\AssignPrice.cshtml" />
     <Content Include="Views\Singapore\CurrentQuotes.cshtml" />
