--- a/NorthWestLabs/NorthWestLabs.csproj
+++ b/NorthWestLabs/NorthWestLabs.csproj
@@ -170,7 +170,6 @@
     <Content Include="Views\Seattle\Edit.cshtml" />
     <Content Include="Views\Seattle\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Pricing.cshtml" />
     <Content Include="Views\Home\CreateProfile.cshtml" />
@@ -186,8 +185,6 @@
     <Content Include="Views\Seattle\EmployeeIndex.cshtml" />
     <Content Include="Views\Seattle\SeattleHome.cshtml" />
     <Content Include="Views\Seattle\WorkOrderEdit.cshtml" />
-    <Content Include="Views\Home\ViewClients.cshtml" />
-    <Content Include="Views\Home\CreateEmployee.cshtml" />
     <Content Include="Views\Home\EmpLogin.cshtml" />
     <Content Include="Views\Home\AddQuote.cshtml" />
     <Content Include="Views\Singapore\SeeQuotes.cshtml" />
@@ -205,6 +202,7 @@
     <Content Include="Views\Singapore\SingaporeHome.cshtml" />
     <Content Include="Views\Clients\ClientPrice.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\Thanks.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
