--- a/NorthWestLabs/NorthWestLabs.csproj
+++ b/NorthWestLabs/NorthWestLabs.csproj
@@ -101,14 +101,22 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\alex-kondratiev-H9t723yPjYI-unsplash.jpg" />
     <Content Include="Content\Images\bonnie.jpg" />
+    <Content Include="Content\Images\CreateWO-Unsplash.jpg" />
     <Content Include="Content\Images\dallin.jpg" />
+    <Content Include="Content\Images\Employees-Unsplash.jpg" />
     <Content Include="Content\Images\gary.jpg" />
     <Content Include="Content\Images\greg-anderson.jpg" />
+    <Content Include="Content\Images\HandShake-Unsplash.jpg" />
     <Content Include="Content\Images\hans-reniers-lQGJCMY5qcM-unsplash.jpg" />
     <Content Include="Content\Images\louis-reed-pwcKF7L4-no-unsplash.jpg" />
     <Content Include="Content\Images\mason.jpg" />
     <Content Include="Content\Images\nasa-Q1p7bh3SHj8-unsplash.jpg" />
     <Content Include="Content\Images\nw.png" />
+    <Content Include="Content\Images\Profile-Unsplash %282%29.jpg" />
+    <Content Include="Content\Images\Quotes-unsplash.jpg" />
+    <Content Include="Content\Images\Seattle-unsplash.jpg" />
+    <Content Include="Content\Images\Singapore-Unsplash.jpg" />
+    <Content Include="Content\Images\WorkOrder-Unsplash %282%29.jpg" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\Styles\Styles.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -205,6 +213,7 @@
     <Content Include="Views\Singapore\SingaporeHome.cshtml" />
     <Content Include="Views\Clients\ClientPrice.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Seattle\SeeQuotes.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
